syntax = "proto3";

package layer.registry;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "layer/registry/data_spec.proto";

option go_package = "github.com/tellor-io/layer/x/registry/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  // RegisterSpec defines a method for registering a new data specification.
  rpc RegisterSpec(MsgRegisterSpec) returns (MsgRegisterSpecResponse);
  // UpdateDataSpec defines a method for updating an existing data specification.
  rpc UpdateDataSpec(MsgUpdateDataSpec) returns (MsgUpdateDataSpecResponse);
  // RemoveDataSpecs defines a method for removing data specs via governance
  rpc RemoveDataSpecs(MsgRemoveDataSpecs) returns (MsgRemoveDataSpecsResponse);
}

// MsgRegisterSpec defines the Msg/RegisterSpec request type.
message MsgRegisterSpec {
  option (cosmos.msg.v1.signer) = "registrar";
  // address that registers the data spec
  string registrar = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // name of the query type (ie. "SpotPrice")
  string query_type = 2;
  // data spec
  DataSpec spec = 3 [(gogoproto.nullable) = false];
}

// MsgRegisterSpecResponse defines the Msg/RegisterSpec response type.
message MsgRegisterSpecResponse {}

// MsgUpdateDataSpec is the Msg/UpdateDataSpec request type.
message MsgUpdateDataSpec {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "layer/x/registry/MsgUpdateDataSpec";

  // authority is the address that is allowed calling this msg.
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // query type to update
  string query_type = 2;
  // data spec update
  DataSpec spec = 3 [(gogoproto.nullable) = false];
}
message MsgUpdateDataSpecResponse {}

// MsgRemoveDataSpecs is the Msg/RemoveDataSpecs request type.
message MsgRemoveDataSpecs {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "layer/x/registry/MsgUpdateDataSpec";

  // authority is the address that is allowed calling this msg.
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  repeated string data_spec_types = 2;
}
message MsgRemoveDataSpecsResponse {}
